# Distributed-Task-Scheduler

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  INTERVIEW_PREP.md  Makefile  README.md  client.py  docker-compose.yml  logger.hpp  master.c  master.cpp  project_bible.md  protocol.h  protocol.hpp  worker.c  worker.cpp
.github/workflows/: build.yml
